--- a/content/course.html
+++ b/content/course.html
@@ -19,19 +19,19 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="description" content="course content.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Material Design Lite</title>
+    <title>vdorbs - course</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="template/templates/dashboard/images/android-desktop.png">
+    <link rel="icon" sizes="192x192" href="../template/templates/dashboard/images/android-desktop.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Material Design Lite">
-    <link rel="apple-touch-icon-precomposed" href="template/templates/dashboard/images/ios-desktop.png">
+    <link rel="apple-touch-icon-precomposed" href="../template/templates/dashboard/images/ios-desktop.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
@@ -39,17 +39,15 @@
     <!-- <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> -->
 
-    <link rel="shortcut icon" href="template/templates/dashboard/images/favicon.png">
+    <link rel="shortcut icon" href="../template/templates/dashboard/images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="template/material.css">
-    <link rel="stylesheet" href="template/templates/dashboard/styles.css">
-    <link rel="stylesheet" href="./css/graph.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../template/material.css">
+    <link rel="stylesheet" href="../template/templates/dashboard/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="./js/account.js"></script>
+    <script src="../js/account.js"></script>
     <meta name="google-signin-client_id" content=  "927920610795-i77s0glk685haiiba12scdicjbkv4ius.apps.googleusercontent.com">
 
 </head>
@@ -80,7 +78,7 @@
     </header>
     <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-            <img id="profimg" src="template/templates/dashboard/images/user.jpg" class="demo-avatar" style="margin:16px">
+            <img id="profimg" src="../template/templates/dashboard/images/user.jpg" class="demo-avatar" style="margin:16px">
             <div class="demo-avatar-dropdown">
                 <!--<span>hello@example.com</span>-->
                 <div id= "signinbtn" class="g-signin2" data-onsuccess="onSignIn"></div>
@@ -117,31 +115,18 @@
     </div>
     <main class="mdl-layout__content mdl-color--grey-100">
         <div class="mdl-grid demo-content">
-            <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
-                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-                    <use xlink:href="#piechart" mask="url(#piemask)">
-                        <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan font-size="0.2" dy="-0.07">%</tspan></text>
-                </svg>
-                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-                    <use xlink:href="#piechart" mask="url(#piemask)">
-                        <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan dy="-0.07" font-size="0.2">%</tspan></text>
-                </svg>
-                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-                    <use xlink:href="#piechart" mask="url(#piemask)">
-                        <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan dy="-0.07" font-size="0.2">%</tspan></text>
-                </svg>
-                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-                    <use xlink:href="#piechart" mask="url(#piemask)">
-                        <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan dy="-0.07" font-size="0.2">%</tspan></text>
-                </svg>
+            <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+                <div id="courseImg" class="mdl-cell" style="min-width: fit-content;">
+                    <img src="http://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-838-algorithms-for-computer-animation-fall-2002/6-838f02.jpg">
+                </div>
+                <div id="courseDescription" class="mdl-cell mdl-cell--stretch" style="flex-grow:1">
+                    <h3>Graphics</h3>
+                    <h4>Course Description</h4>
+                    <p style="display:inline">Animation is a compelling and effective form of expression; it engages viewers and makes difficult concepts easier to grasp. Today's animation industry creates films, special effects, and games with stunning visual detail and quality. This graduate class will investigate the algorithms that make these animations possible: keyframing, inverse kinematics, physical simulation, optimization, optimal control, motion capture, and data-driven methods. Our study will also reveal the shortcomings of these sophisticated tools. The students will propose improvements and explore new methods for computer animation in semester-long research projects. The course should appeal to both students with general interest in computer graphics and students interested in new applications of machine learning, robotics, biomechanics, physics, applied mathematics and scientific computing.</p>
+                </div>
             </div>
-            <div class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
-                <svg fill="currentColor" viewBox="0 0 500 250" class="demo-graph">
-                    <use xlink:href="#chart">
-                </svg>
-                <svg fill="currentColor" viewBox="0 0 500 250" class="demo-graph">
-                    <use xlink:href="#chart">
-                </svg>
+            <div id="courseSyllabus" class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
+                <div id="course_inner_section"> <h2 class="subhead">Course Meeting Times</h2> <p>Lectures: 2 sessions / week, 1.5 hours / session</p> <h2 class="subhead">Course Goals</h2> <p>This graduate course introduces students to open problems in computer animation, teaches essential techniques for solving these problems, and enables students to explore these and other techniques in a semester-long research project.</p> <h2 class="subhead">Prerequisites</h2> <p>Programming experience and mathematical sophistication are essential for this course. Successful completion of an introductory computer graphics course such as 6.837 is required. A student who does not have the prerequisites should obtain the permission of the instructor.</p> <h2 class="subhead">Required Work</h2> <p>One reading assignment each week and a semester-long research project. The project will require three written reports: extended abstract of proposed work, a short progress report, and a final conference-style report.</p> <h2 class="subhead">Grading</h2> <p>20% Reading assignments and participation</p> <p>20% Extended abstract</p> <p>30% Progress report</p> <p>30% Final report</p> <p>The grades for the research project and corresponding written reports will depend on clarity of reports, technical contributions, and creativity of ideas</p> <h2 class="subhead">Appropriate Conduct</h2> <p>All students must complete reading assignments on their own.</p> <p>A research project is to be tackled by a team of two students. Permission to work individually may be granted, but only in special circumstances. A team can collaborate extensively to ensure a timely project completion.</p> <p>The following excerpts from &quot;The Mayfield Handbook of Technical and Scientific Writing&quot; describe the guidelines for appropriate academic conduct:</p> <blockquote> <h3 class="subsubhead">Legal and Ethical Issues</h3> <p>Research in science and engineering, as in most professions, sometimes poses unexpected legal and ethical problems. These problems will often become apparent at the writing stage of a project. When written claims are made, the concreteness and technical quality of many statements can mask limitations and inconsistencies, thus posing potential legal and ethical problems. Here are some things to keep in mind:</p> <ul> <li>The expert uses his or her specialized knowledge to solve a problem. Hence, the expert assumes an authority and uses a language that the lay person is usually not able to judge. Some sources of liability include a failure to point out alternatives, failure to note negative secondary effects, failure to give the whole picture, failure to acknowledge gaps in logic, and failure to cite or credit sources.</li> <li>Be aware of potential sources of plagiarism. Be sure you understand what plagiarism is. It is the copying, whether deliberate or unintentional, of ideas or portions of text without citing the sources for credit. It is also the use of other people's ideas without attributing them to the proper source. Although plagiarism is often unintentional, it still demonstrates incompetence. If you fail to record your sources and then later forget that you used a source, you are still liable and open to the charge of theft of intellectual property</li> </ul> <h3 class="subsubhead">Citing Sources and Listing References</h3> <p>Whenever you include another person's information or wording in a document, you must acknowledge the source and include a citation that will tell the reader where you obtained it. If you do not do so, you deprive your reader of the ability to locate information that he or she might want to explore further. In addition, you may be committing intellectual theft, plagiarism.</p> <p>Mechanisms that allow a reader to verify the information presented in a document are essential parts of most types of technical and scientific writing. Procedures sections of technical and laboratory reports, for example, provide the reader with information sufficient to replicate both the method and the data described in the document.</p> <p>There are two basic and universal rules regarding the use of information in professional and, especially, academic writing:</p> <ul> <li>If you use the language of your source, you must quote it exactly, enclose it in quotation marks, and cite the source.</li> <li>If you use ideas or information that are not common knowledge, you must cite the source.</li> </ul> </blockquote> <div class="help slide-bottom"> <div class="help-message"> <a class="help-engage" href="javascript: trackEvents('Bottom Get Started','bottom get started Click','Help Overlay');">Need help getting started?</a> <a href="javascript:disableHelpPopup(); trackEvents('Bottom Don\'t Show','bottom don\'t show Click','Help Overlay');" class="help-dismiss">Don't show me this again</a> </div> </div> <div class="help popup-center"> <div class="help-message"> <p class="help-dismiss"><a href="javascript:disableHelpPopup(); trackEvents('Popup Don\'t Show','popup don\'t show Click','Help Overlay');">Don't show me this again</a></p> <h2>Welcome!</h2> <p>This is one of over 2,200 courses on OCW. Find materials for this course in the pages linked along the left. </p> <p><strong>MIT OpenCourseWare</strong> is a free &amp; open publication of material from thousands of MIT courses, covering the entire MIT curriculum.</p> <p><strong>No enrollment or registration.</strong> Freely browse and use OCW materials at your own pace. There's no signup, and no start or end dates.</p> <p><strong>Knowledge is your reward.</strong> Use OCW to guide your own life-long learning, or to teach others. We don't offer credit or certification for using OCW.</p> <p><strong>Made for sharing</strong>. Download files for later. Send to friends and colleagues. Modify, remix, and reuse (just remember to cite OCW as the source.)</p> <p class="help-engage">Learn more at <a href="http://ocw.mit.edu/help/get-started-with-ocw/" onclick="trackEvents('Popup Get Started','popup get started Click','Help Overlay');">Get Started with MIT OpenCourseWare</a></p> </div> </div> </div>
             </div>
             <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
                 <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
@@ -196,6 +181,6 @@
         </div>
     </main>
 </div>
-<script src="template/material.min.js"></script>
+<script src="../template/material.min.js"></script>
 </body>
 </html>
