added name of course to header bar

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <div id="bodydiv" class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
     <header id="header" class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div id="headerrow" class="mdl-layout__header-row">
-            <span id="home" class="mdl-layout-title">Home</span>
-            <button id="backbutton" class="mdl-button mdl-js-button mdl-button--icon" data-upgraded=",MaterialButton" style="display:none" onclick="getGraph()">
+            <button id="backbutton" class="mdl-button mdl-js-button mdl-button--icon" data-upgraded=",MaterialButton" style="display:none;margin-right:24px" onclick="getGraph()">
                 <i class="material-icons">chevron_left</i>
             </button>
+            <span id="home" class="mdl-layout-title">Home</span>
             <div class="mdl-layout-spacer"></div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
                 <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
