--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
     <link rel="stylesheet" href="./css/graph.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="left-sidebar/sidebar.css">
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="./js/account.js"></script>
     <meta name="google-signin-client_id" content=  "927920610795-i77s0glk685haiiba12scdicjbkv4ius.apps.googleusercontent.com">
 
 </head>
@@ -326,6 +322,9 @@
         </div>
     </main>
 </div>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="https://apis.google.com/js/platform.js" async></script>
+<script src="./js/account.js"></script>
 <script src="left-sidebar/sidebar.js"> </script>
 <script src="template/material.min.js"></script>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.21.min.js"></script>
@@ -334,7 +333,7 @@
 </script>
 <!-- <script src="./js/jquery-mobile-just-touch.js"></script> -->
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript"></script>
-<script src="http://marvl.infotech.monash.edu/webcola/cola.v3.min.js"></script>
+<script src="./js/cola.v3.min.js"></script>
 <script src="content/content.js"></script>
 <script src="./js/graph.js"></script>
 </body>
