--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
     <link rel="stylesheet" href="./css/graph.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="left-sidebar/sidebar.css">
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' async></script>
+    <script src="./js/account.js" async></script>
+    <script src="left-sidebar/sidebar.js" async> </script>
+    <script src="template/material.min.js" async></script>
+
+    <!-- <script src="./js/jquery-mobile-just-touch.js"></script> -->
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript" async></script>
+    <script src="./js/cola.v3.min.js" async></script>
+    <script src="./js/graph.js" async></script>
+    <script src="https://apis.google.com/js/platform.js" async></script>
+    <script src="content/content.js" async></script>
     <meta name="google-signin-client_id" content=  "927920610795-i77s0glk685haiiba12scdicjbkv4ius.apps.googleusercontent.com">
 
 </head>
@@ -255,6 +266,9 @@
         <div id="graphgrid" class="mdl-grid demo-content " style="max-width:none; padding:8px">
             <div  id="graphbox" class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="padding:0">
                 <svg id="graphsvg" fill="currentColor" class="demo-chart"></svg>
+                <script>
+                    document.getElementById('graphsvg').style.height = document.documentElement.clientHeight - document.getElementById('header').clientHeight - 32;
+                </script>
             </div>
         </div>
         <div id="contentgrid" class="mdl-grid demo-content" style="display:none">
@@ -322,18 +336,19 @@
         </div>
     </main>
 </div>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="./js/account.js"></script>
-<script src="left-sidebar/sidebar.js"> </script>
-<script src="template/material.min.js"></script>
-<script>
-    $('#graphsvg').height($(window).height() - $("#header").height() - 32);
+
+
+<script type="text/javascript">
+    function downloadJSAtOnload() {
+        var element = document.createElement("script");
+        element.src = "./js/graph.js";
+        document.body.appendChild(element);
+    }
+    if (window.addEventListener)
+        window.addEventListener("load", downloadJSAtOnload, false);
+    else if (window.attachEvent)
+        window.attachEvent("onload", downloadJSAtOnload);
+    else window.onload = downloadJSAtOnload;
 </script>
-<!-- <script src="./js/jquery-mobile-just-touch.js"></script> -->
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript"></script>
-<script src="./js/cola.v3.min.js"></script>
-<script src="./js/graph.js"></script>
-<script src="https://apis.google.com/js/platform.js" async></script>
-<script src="content/content.js"></script>
 </body>
 </html>
