--- a/index.html
+++ b/index.html
@@ -47,17 +47,7 @@
     <link rel="stylesheet" href="./css/graph.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="left-sidebar/sidebar.css">
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' async></script>
-    <script src="./js/account.js" async></script>
-    <script src="left-sidebar/sidebar.js" async> </script>
-    <script src="template/material.min.js" async></script>
 
-    <!-- <script src="./js/jquery-mobile-just-touch.js"></script> -->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript" async></script>
-    <script src="./js/cola.v3.min.js" async></script>
-    <script src="./js/graph.js" async></script>
-    <script src="https://apis.google.com/js/platform.js" async></script>
-    <script src="content/content.js" async></script>
     <meta name="google-signin-client_id" content=  "927920610795-i77s0glk685haiiba12scdicjbkv4ius.apps.googleusercontent.com">
 
 </head>
@@ -337,6 +327,17 @@
     </main>
 </div>
 
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' defer></script>
+<script src="./js/account.js" async></script>
+<script src="left-sidebar/sidebar.js" async> </script>
+<script src="template/material.min.js" async></script>
+
+<!-- <script src="./js/jquery-mobile-just-touch.js"></script> -->
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript" async></script>
+<script src="./js/cola.v3.min.js" async></script>
+<script src="./js/graph.js" async></script>
+<script src="https://apis.google.com/js/platform.js" async></script>
+<script src="content/content.js" async></script>
 
 <script type="text/javascript">
     function downloadJSAtOnload() {
