--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> -->
 
     <link rel="shortcut icon" href="template/templates/dashboard/images/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en"
+          rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="template/material.css">
     <link rel="stylesheet" href="template/templates/dashboard/styles.css">
@@ -48,22 +49,26 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="left-sidebar/sidebar.css">
 
-    <meta name="google-signin-client_id" content=  "927920610795-i77s0glk685haiiba12scdicjbkv4ius.apps.googleusercontent.com">
+    <meta name="google-signin-client_id"
+          content="927920610795-i77s0glk685haiiba12scdicjbkv4ius.apps.googleusercontent.com">
 
 </head>
 <body>
 <div id="bodydiv" class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
     <header id="header" class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div id="headerrow" class="mdl-layout__header-row">
-            <button id="backbutton" class="mdl-button mdl-js-button mdl-button--icon" data-upgraded=",MaterialButton" style="display:none;margin-right:24px" onclick="getGraph()">
+            <button id="backbutton" class="mdl-button mdl-js-button mdl-button--icon" data-upgraded=",MaterialButton"
+                    style="display:none;margin-right:24px" onclick="getGraph()">
                 <i class="material-icons">chevron_left</i>
             </button>
             <span id="home" class="mdl-layout-title">Home</span>
+
             <div class="mdl-layout-spacer"></div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
                 <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
                     <i class="material-icons">search</i>
                 </label>
+
                 <div class="mdl-textfield__expandable-holder">
                     <input class="mdl-textfield__input" type="text" id="search">
                     <label class="mdl-textfield__label" for="search">Enter your query...</label>
@@ -79,13 +84,16 @@
             </ul>
         </div>
     </header>
-    <div id = "drawer" class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+    <div id="drawer" class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-            <img id="profimg" src="template/templates/dashboard/images/user.jpg" class="demo-avatar" style="margin:16px">
+            <img id="profimg" src="template/templates/dashboard/images/user.jpg" class="demo-avatar"
+                 style="margin:16px">
+
             <div class="demo-avatar-dropdown">
                 <!--<span>hello@example.com</span>-->
-                <div id= "signinbtn" class="g-signin2" data-onsuccess="onSignIn"></div>
+                <div id="signinbtn" class="g-signin2" data-onsuccess="onSignIn"></div>
                 <span id="namefield" style="display:none"></span>
+
                 <div class="mdl-layout-spacer"></div>
 
                 <button id="demo-menu-lower-right"
@@ -95,14 +103,15 @@
 
                 <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
                     for="demo-menu-lower-right">
-                    <li id="signout" class="mdl-menu__item signout" onclick="signOut()" style="display:none">sign out</li>
+                    <li id="signout" class="mdl-menu__item signout" onclick="signOut()" style="display:none">sign out
+                    </li>
                     <li class="mdl-menu__item">integrate Facebook</li>
                     <li class="mdl-menu__item">integrate LinkedIn</li>
                 </ul>
             </div>
         </header>
 
-        <div id = "graphsidebarwrapper" class="sidebar-wrapper">
+        <div id="graphsidebarwrapper" class="sidebar-wrapper">
             <ul class="dropdown">
                 <li class="item parent" style="background-color:rgb(245,245,245)">
                     <a class="mybuttontext" onclick="showwholegraph()">All Subjects</a>
@@ -123,7 +132,8 @@
                     </ul>
                 </li>
                 <li class="item parent" style="background-color:#1f77b4">
-                    <a href="#civil-and-environmental-engineering" class="mybuttontext" onclick="filtersubject('1')">Civil and Environmental Engineering</a>
+                    <a href="#civil-and-environmental-engineering" class="mybuttontext" onclick="filtersubject('1')">Civil
+                        and Environmental Engineering</a>
                     <a class="mybutton"><i class="material-icons myicon">arrow_drop_down</i></a>
                     <ul class="dropdown lvl1">
                         <li class="item" style="background-color:rgb(245,245,245)">
@@ -225,20 +235,32 @@
             </ul>
         </div>
 
-        <nav id = "graphsidebarnav" class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Inbox</a>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Trash</a>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Spam</a>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Forums</a>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Updates</a>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Promos</a>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Purchases</a>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
+        <nav id="graphsidebarnav" class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">home</i>Home</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">inbox</i>Inbox</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">delete</i>Trash</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">report</i>Spam</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">forum</i>Forums</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">flag</i>Updates</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">local_offer</i>Promos</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">shopping_cart</i>Purchases</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">people</i>Social</a>
+
             <div class="mdl-layout-spacer"></div>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
         </nav>
-        <nav id = "contentsidebarnav" class="demo-navigation mdl-navigation mdl-color--blue-grey-800" style="display:none">
+        <nav id="contentsidebarnav" class="demo-navigation mdl-navigation mdl-color--blue-grey-800"
+             style="display:none">
             <a class="mdl-navigation__link" href="">Lecture 1</a>
             <a class="mdl-navigation__link" href="">Lecture 2</a>
             <a class="mdl-navigation__link" href="">Lecture 3</a>
@@ -248,31 +270,36 @@
             <a class="mdl-navigation__link" href="">Lecture 7</a>
             <a class="mdl-navigation__link" href="">Lecture 8</a>
             <a class="mdl-navigation__link" href="">Lecture 9</a>
+
             <div class="mdl-layout-spacer"></div>
-            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
         </nav>
     </div>
     <main id="main" class="mdl-layout__content mdl-color--grey-100">
         <div id="graphgrid" class="mdl-grid demo-content " style="max-width:none; padding:8px">
-            <div  id="graphbox" class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="padding:0">
-                <svg id="graphsvg" fill="currentColor" class="demo-chart"></svg>
-                <script>
-                    document.getElementById('graphsvg').style.height = document.documentElement.clientHeight - document.getElementById('header').clientHeight - 32;
-                </script>
+            <div id="graphbox" class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid"
+                 style="padding:0">
+                <svg id="graphsvg" fill="currentColor" zoomAndPan="magnify" class="demo-chart" style="height: 875px;"></svg>
             </div>
+            <script>
+                document.getElementById('graphsvg').style.height = document.documentElement.clientHeight - document.getElementById('header').clientHeight - 32;
+            </script>
         </div>
         <div id="contentgrid" class="mdl-grid demo-content" style="display:none">
             <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
                 <div class="mdl-cell" style="min-width: fit-content;">
-                    <img id="courseimage" >
+                    <img id="courseimage">
                 </div>
                 <div class="mdl-cell mdl-cell--stretch" style="flex-grow:1">
                     <h3 id="coursename"></h3>
                     <h4>Course Description</h4>
+
                     <p id="coursedescription" style="display:inline"></p>
                 </div>
             </div>
-            <div id="coursesyllabus" class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col"></div>
+            <div id="coursesyllabus"
+                 class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col"></div>
             <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
                 <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
                     <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
@@ -317,7 +344,9 @@
                         </ul>
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--blue-grey-50">Change location</a>
+                        <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--blue-grey-50">Change
+                            location</a>
+
                         <div class="mdl-layout-spacer"></div>
                         <i class="material-icons">location_on</i>
                     </div>
@@ -329,20 +358,19 @@
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' defer></script>
 <script src="./js/account.js" async></script>
-<script src="left-sidebar/sidebar.js" async> </script>
+<script src="left-sidebar/sidebar.js" async></script>
 <script src="template/material.min.js" async></script>
 
 <!-- <script src="./js/jquery-mobile-just-touch.js"></script> -->
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript" async></script>
 <script src="./js/cola.v3.min.js" async></script>
-<script src="./js/graph.js" async></script>
 <script src="https://apis.google.com/js/platform.js" async></script>
 <script src="content/content.js" async></script>
 
 <script type="text/javascript">
     function downloadJSAtOnload() {
         var element = document.createElement("script");
-        element.src = "./js/graph.js";
+        element.src = "./js/svg_graph.js";
         document.body.appendChild(element);
     }
     if (window.addEventListener)
